--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
   text-align: center;
   background-image: url("noise.png");
-  background-repeat: repeat-y;
+  background-repeat: repeat;
 }
